objects/ASI_CRM_TOV_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_CRM_CN_Converion9L_C__c</fullName>
        <formula>IF(ASI_CRM_UOM__c==&quot;BT&quot;
,ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Converion9L_C__c
,ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Converion9L_C__c
*ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Pack_Value__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Conversion Factor Bottle to 9L</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Copy_SUM__c</fullName>
        <label>Copy SUM</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_Order_Qty_9L__c</fullName>
        <formula>ASI_CRM_Order_QTY__c*ASI_CRM_CN_Converion9L_C__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order Qty(9L)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_CN_SUM__c</fullName>
        <formula>IF(RecordType.DeveloperName==&quot;ASI_CRM_CN_CN_TOV_Detail&quot;,
IF(ASI_CRM_UOM__c==&quot;CA&quot;,
ASI_CRM_Price_BT__c * ASI_CRM_Order_QTY__c * ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_Pack_Value__c,
ASI_CRM_Price_BT__c * ASI_CRM_Order_QTY__c)
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SUM</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_CRM_Item_Group__c</fullName>
        <label>Item Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_Promotion_Code__c</fullName>
        <label>JDE Promotion Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_JDE_SO_Line_Number__c</fullName>
        <label>JDE SO Line Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Order_QTY__c</fullName>
        <label>Order QTY</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Pack_Description__c</fullName>
        <formula>IF( CONTAINS(RecordType.DeveloperName, &quot;ASI_CRM_CN_CN_TOV_Detail&quot; ),  IF(NOT(ISBLANK(ASI_CRM_SF_SO_Request_Line_Number__c )),  ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Product_Name__r.ASI_CRM_CN_pack__c, IF( NOT(ISBLANK( ASI_CRM_SF_FOC_Request_Line_Number__c )),  ASI_CRM_SF_FOC_Request_Line_Number__r.ASI_FOC_CN_Packing_Description__c, &quot;&quot;)),&quot;&quot;)</formula>
        <label>Pack Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_PriceWVAT_BT__c</fullName>
        <label>Price (BT) with VAT</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Price_BT__c</fullName>
        <label>Price (BT)</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_FOC_Request_Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF FOC Request Line Number</label>
        <referenceTo>ASI_FOC_Request_Item__c</referenceTo>
        <relationshipLabel>TOV Line Items</relationshipLabel>
        <relationshipName>TOV_Line_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_Promotion_Code__c</fullName>
        <formula>ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Promotion_Code__r.Name</formula>
        <label>SF Promotion Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Price_BT__c</fullName>
        <formula>ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Unit_Price_BT_with_VAT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF SO Price (BT)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Price_BT_with_VAT__c</fullName>
        <formula>IF(ISBLANK(ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Promotion_Code__c),ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Unit_Price_BT_with_VAT__c /1.17,ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Unit_Price_BT_with_VAT__c /1.17* ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c /(ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Buy_X__c +  ASI_CRM_SF_SO_Request_Line_Number__r.ASI_CRM_CN_Promotion_Code__r.ASI_CRM_Get_Y__c ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SF SO Price (BT) after Promotion w/ VAT</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SF_SO_Request_Line_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SF SO Request Line Number</label>
        <referenceTo>ASI_KOR_Sales_Order_Transaction__c</referenceTo>
        <relationshipName>TOV_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU_Description__c</fullName>
        <label>SKU Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_SKU__c</fullName>
        <label>SKU</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_TOV__c</fullName>
        <label>TOV</label>
        <referenceTo>ASI_CRM_TOV__c</referenceTo>
        <relationshipName>TOV_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_Total_Amount__c</fullName>
        <formula>ASI_CRM_Order_QTY__c * ASI_CRM_Price_BT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_CRM_UOM__c</fullName>
        <label>UOM</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>TOV Line Item</label>
    <nameField>
        <displayFormat>TOVD-{YY}{000000}</displayFormat>
        <label>TOV Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TOV Line Items</pluralLabel>
    <recordTypes>
        <fullName>ASI_CRM_CN_CN_TOV_Detail</fullName>
        <active>true</active>
        <label>CN TOV Detail</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>